force-app/main/default/objects/Data_360_Table_Config__c/Data_360_Table_Config__c.object-meta.xml
<CustomObject>
    <description>Stores Data 360 Table configurations as JSON. Used by the Data 360 Configurator UI and read by data360Table at runtime.</description>
    <label>Data 360 Table Config</label>
    <nameField>
        <label>Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data 360 Table Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>