force-app/main/default/objects/Data_360_Table_Config__c/fields/Config_JSON__c.field-meta.xml
<CustomField>
    <fullName>Config_JSON__c</fullName>
    <description>Full table configuration stored as JSON</description>
    <label>Config JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>