force-app/main/default/objects/Data_360_Table_Config__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Admin notes on where/how this config is intended to be used</description>
    <inlineHelpText>Describe where and how this configuration is intended to be used</inlineHelpText>
    <label>Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>