force-app/main/default/objects/Data_360_Table_Config__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>The Data Cloud object API name (__dll/__dlm) for quick lookup</description>
    <externalId>true</externalId>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>